--- a/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_product-tile.scss
+++ b/wordpress/wp-content/themes/ben-lido2/interactive/src/styles/_product-tile.scss
@@ -83,6 +83,7 @@
       @include sentinel(14px, 300);
       color: $medium-grey;
       padding: 10px 0 0;
+      letter-spacing: 0;
     }
 
     &-price {
@@ -156,6 +157,7 @@
           display:block;
           margin-top: 10px;
           min-height: 36px;
+          letter-spacing: 0;
         }
       }
     }
